# haruspex

./: CLAUDE.md  README.md  haruspex.spec  pyproject.toml
.github/workflows/: build.yml
haruspex/: main.py
haruspex/config/: settings.py
haruspex/enrichers/: esi.py  zkill.py
haruspex/parsers/: dscan.py  local.py  logs.py
haruspex/ui/: dscan_panel.py  help_screen.py  local_panel.py  log_panel.py  widgets.py
lazyscan/: main.py
lazyscan/config/: settings.py
lazyscan/data/: ships.json
lazyscan/enrichers/: esi.py  zkill.py
lazyscan/parsers/: local.py
lazyscan/ui/: dscan_panel.py  local_panel.py  log_panel.py
scripts/: build_ships.py
tests/: test_dscan.py
tests/fixtures/: combat_fleet.txt  small_gang.txt  solo_hunter.txt  structures_only.txt
