[project]
name = "haruspex"
version = "1.0.1"
description = "EVE Online D-scan and local intel TUI — HARUSPEX Proximity Intelligence Platform"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "textual>=8.1.1",
    "tomli-w>=1.2.0",
]

[project.scripts]
haruspex = "haruspex.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "pytest>=9.0.2",
    "pyinstaller>=6.0",
]
